force-app/main/default/objects/cgc_sync__Sync_Metadata_Changes__c/cgc_sync__Sync_Metadata_Changes__c.object-meta.xml
<CustomObject>
    <description>Used to store the timestamps for changes to metadata</description>
    <label>Sync Metadata Change</label>
    <nameField>
        <label>Sync Metadata Change Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sync Metadata Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>