force-app/main/default/objects/cgc_sync__Sync_Metadata_Changes__c/fields/cgc_sync__DeploymentTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__DeploymentTimeStamp__c</fullName>
    <description>Timestamp of the latest change for any deployment package.</description>
    <label>DeploymentTimeStamp</label>
    <type>DateTime</type>
</CustomField>