force-app/main/default/objects/cgc_sync__Sync_Metadata_Changes__c/fields/cgc_sync__Device_Health_Status_Requires_Alert__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Device_Health_Status_Requires_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true when there is one or more external devices that have errors with Error or Warning status.</description>
    <label>Device Health Status Requires Alert</label>
    <type>Checkbox</type>
</CustomField>