force-app/main/default/objects/cgc_sync__Sync_Metadata_Changes__c/fields/cgc_sync__Identifier__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Identifier__c</fullName>
    <description>Internal identifier for the client.</description>
    <label>Identifier</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>