force-app/main/default/objects/cgc_sync__Sync_Metadata_Changes__c/fields/cgc_sync__MobilityThemesTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__MobilityThemesTimeStamp__c</fullName>
    <description>Timestamp of the latest change for the theme configuration.</description>
    <label>MobilityThemesTimeStamp</label>
    <type>DateTime</type>
</CustomField>