force-app/main/default/objects/cgc_sync__Sync_Metadata_Changes__c/fields/cgc_sync__NamedQueriesTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__NamedQueriesTimeStamp__c</fullName>
    <description>Timestamp of the latest change for the named query configuration.</description>
    <label>NamedQueriesTimeStamp</label>
    <type>DateTime</type>
</CustomField>