force-app/main/default/objects/cgc_sync__Sync_Metadata_Changes__c/fields/cgc_sync__NftsTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__NftsTimeStamp__c</fullName>
    <description>Timestamp of the latest change for the NFT configuration.</description>
    <label>NftsTimeStamp</label>
    <type>DateTime</type>
</CustomField>