force-app/main/default/objects/cgc_sync__Sync_Metadata_Changes__c/fields/cgc_sync__SyncConfigurationTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__SyncConfigurationTimeStamp__c</fullName>
    <description>Timestamp of the latest change for the sync configuration.</description>
    <label>SyncConfigurationTimeStamp</label>
    <type>DateTime</type>
</CustomField>