force-app/main/default/objects/cgc_sync__Sync_Metadata_Changes__c/fields/cgc_sync__TrackedObjectDescribeTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__TrackedObjectDescribeTimeStamp__c</fullName>
    <description>Timestamp for the client for re-fetching the metadata for configured tracked objects.</description>
    <label>TrackedObjectDescribeTimeStamp</label>
    <type>DateTime</type>
</CustomField>