force-app/main/default/objects/cgc_sync__Sync_Metadata_Changes__c/fields/cgc_sync__TrackedObjectSettingsTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__TrackedObjectSettingsTimeStamp__c</fullName>
    <description>Timestamp of the latest change for the tracked object configuration.</description>
    <label>TrackedObjectSettingsTimeStamp</label>
    <type>DateTime</type>
</CustomField>