force-app/main/default/objects/cgc_sync__Sync_Metadata_Changes__c/fields/cgc_sync__TranslationTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__TranslationTimeStamp__c</fullName>
    <description>Timestamp for the latest change for the sync messages.</description>
    <label>TranslationTimeStamp</label>
    <type>DateTime</type>
</CustomField>